Dropdown Extra space fix

--- a/PlaygroundComponent.module.scss
+++ b/PlaygroundComponent.module.scss
@@ -90,6 +90,7 @@
       border-radius: 4px;
       border: solid 2px var(--gray-04);
       color: var(--black-03);
+      background-color: var(--white-01);
 
       &:hover {
         background-color: var(--gray-13);
